--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=
-DB_PORT=
-DB_DATABASE=
-DB_USERNAME=
-DB_PASSWORD=
+DB_HOST=120.79.222.59
+DB_PORT=lab_wlz
+DB_DATABASE=lab_wlz
+DB_USERNAME=lab_wlz
+DB_PASSWORD=Te5eXxTP3dfAk5s5
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
